--- a/forexglobal/sass/blocks/inner/webtrader.scss
+++ b/forexglobal/sass/blocks/inner/webtrader.scss
@@ -1,5 +1,12 @@
 .webtrader {
   padding: 150px 0 0 0;
+  
+  hr {
+    height: 1px;
+    margin: 50px 0;
+    border: none;
+    background: #b8b8b8;
+  }
 }
 
 .webtrader__name {
@@ -13,7 +20,7 @@
 .webtrader__text {
   color: $sc;
   font-size: 18px;
-  font-weight: 300;
+  font-weight: 100;
 }
 
 .webtrader__img {
@@ -28,7 +35,13 @@
   margin: 30px 0 0 0;
   
   &--down {
-    justify-content: center;
+    width: 500px;
+    margin: 30px auto 0;
+  }
+  
+  &--list {
+    justify-content: space-around;
+    align-items: center;
   }
 }
 
@@ -52,7 +65,7 @@
   p {
     color: #666666;
     font-size: 12px;
-    font-weight: 300;
+    font-weight: 100;
     transition: 0.3s;
   }
   
@@ -66,5 +79,150 @@
     p {
       color: $sc;
     }
+  }
+}
+
+.webtrader__mockup {
+  width: 471px;
+  height: 536px;
+  background: url('../img/webtrader-mockup-2.png') no-repeat top;
+  background-size: 471px;
+}
+
+.webtrader__list {
+  color: $sc;
+  font-size: 18px;
+  
+  b {
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+  
+  ul {
+    margin: 20px 0 0 0;
+    padding: 0;
+    font-weight: 100;
+    list-style-position: inside;
+    list-style-image: url('../img/webtrader-li.svg');
+    
+    li {
+      margin: 0 0 15px 0;
+    }
+  }
+}
+
+.webtrader__try {
+  
+  h2 {
+    margin: 0 0 30px 0;
+    color: $sc;
+    font-size: 40px;
+    font-weight: normal;
+    text-align: center;
+  }
+}
+
+.webtrader__links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 60px 0;
+}
+
+.webtrader__real {
+  position: relative;
+  margin: 0 15px 0 0;
+  padding: 10px 0;
+  color: $sc;
+  width: 170px;
+  font-size: 15px;
+  font-weight: 500;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  line-height: 10px;
+  border-radius: 3px;
+  background: $mc;
+  
+  span {
+    font-size: 10px;
+    font-weight: normal;
+  }
+  
+  &:after {
+    content: 'Trading involves risk of loss';
+    position: absolute;
+    left: 0;
+    bottom: -15px;
+    width: 100%;
+    color: #333333;
+    font-size: 12px;
+    font-weight: normal;
+    text-transform: none;
+  }
+}
+
+.webtrader__demo {
+  margin: 0 0 0 15px;
+  padding: 9px 0;
+  color: $sc;
+  width: 168px;
+  font-size: 15px;
+  font-weight: 500;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  line-height: 10px;
+  border: 1px solid $sc;
+  border-radius: 3px;
+  // background: $mc;
+  
+  span {
+    font-size: 10px;
+    font-weight: normal;
+  }
+}
+
+@media screen and ($tablet-widths) {
+  .webtrader {
+    padding: 200px 0 0 0;
+  }
+  
+  .webtrader__text {
+    padding: 0 15px;
+  }
+  
+  .webtrader__mockup {
+    width: 400px;
+    height: 460px;
+    background-size: 400px;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .webtrader {
+    padding: 100px 0 0 0;
+  }
+  
+  .webtrader__name {
+    margin: 0 0 20px 0;
+    font-size: 40px;
+  }
+  
+  .webtrader__flex {
+    
+    &--list {
+      flex-direction: column;
+    }
+  }
+  
+  .webtrader__mockup {
+    width: 300px;
+    height: 350px;
+    background-size: 300px;
+  }
+  
+  .webtrader__list {
+    margin: 30px 0 0 0;
   }
 }
