--- a/forexglobal/sass/blocks/main/account.scss
+++ b/forexglobal/sass/blocks/main/account.scss
@@ -56,6 +56,7 @@
   }
   
   a {
+    position: relative;
     display: block;
     width: 168px;
     margin: auto;
@@ -68,12 +69,14 @@
     text-decoration: none;
     border: 1px solid $mc;
     border-radius: 3px;
-  }
-  
-  &:nth-child(2) {
     
-    li:last-child {
-      list-style: none;
+    &::after {
+      content: 'Trading involves risk of loss';
+      position: absolute;
+      bottom: -15px;
+      left: 0;
+      width: inherit;
+      font-size: 10px;
     }
   }
   
