--- a/forexglobal/sass/blocks/main/form.scss
+++ b/forexglobal/sass/blocks/main/form.scss
@@ -79,6 +79,7 @@
     }
     
     button {
+      position: relative;
       margin: 25px 0 0 0;
       padding: 10px 0;
       color: $sc;
@@ -89,6 +90,16 @@
       border: none;
       border-radius: 3px;
       background: $mc;
+      
+      &::after {
+        content: 'Trading involves risk of loss';
+        position: absolute;
+        bottom: -15px;
+        left: 0;
+        width: 100%;
+        color: $mc;
+        font-size: 10px;
+      }
     }
   }
 }
