--- a/forexglobal/sass/blocks/main/welcome.scss
+++ b/forexglobal/sass/blocks/main/welcome.scss
@@ -34,6 +34,7 @@
 }
 
 .welcome__button {
+  position: relative;
   display: block;
   width: 170px;
   padding: 10px 0;
@@ -45,6 +46,16 @@
   text-decoration: none;
   border-radius: 3px;
   background: $mc;
+  
+  &::after {
+    content: 'Trading involves risk of loss';
+    position: absolute;
+    bottom: -15px;
+    left: 0;
+    width: inherit;
+    color: $sc;
+    font-size: 10px;
+  }
 }
 
 @media screen and ($tablet-widths) {
