--- a/forexglobal/sass/blocks/inner/webtrader.scss
+++ b/forexglobal/sass/blocks/inner/webtrader.scss
@@ -43,6 +43,10 @@
     justify-content: space-around;
     align-items: center;
   }
+  
+  &:first-child {
+    padding: 40px 0 0 0;
+  }
 }
 
 .webtrader__box {
@@ -79,6 +83,92 @@
     p {
       color: $sc;
     }
+    
+    &::before {
+      border: 1px dashed $mc;
+    }
+    
+    &::after {
+      opacity: 1;
+    }
+  }
+}
+
+.webtrader__box--right {
+  position: relative;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 21px;
+    left: 125px;
+    width: 200px;
+    border: 1px dashed #666;
+    transition: 0.3s;
+  }
+  
+  &::after {
+    content: '';
+    position: absolute;
+    top: 17px;
+    left: 328px;
+    width: 10px;
+    height: 10px;
+    background: url('../img/webtrader-point.svg') no-repeat center;
+    opacity: 0;
+    transition: 0.3s;
+  }
+}
+
+.webtrader__box--left {
+  position: relative;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 21px;
+    left: -125px;
+    width: 200px;
+    border: 1px dashed #666;
+    transition: 0.3s;
+  }
+  
+  &::after {
+    content: '';
+    position: absolute;
+    top: 17px;
+    left: -136px;
+    width: 10px;
+    height: 10px;
+    background: url('../img/webtrader-point.svg') no-repeat center;
+    opacity: 0;
+    transition: 0.3s;
+  }
+}
+
+.webtrader__box--up {
+  position: relative;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: -154px;
+    left: 100px;
+    height: 150px;
+    border: 1px dashed #666;
+    transition: 0.3s;
+  }
+  
+  &::after {
+    content: '';
+    position: absolute;
+    top: -165px;
+    left: 96px;
+    width: 10px;
+    height: 10px;
+    background: url('../img/webtrader-point.svg') no-repeat center;
+    opacity: 0;
+    transition: 0.3s;
   }
 }
 
@@ -192,6 +282,38 @@
     padding: 0 15px;
   }
   
+  .webtrader__img {
+    padding: 0 15px;
+    background-size: 500px;
+    background-position-y: 80px;
+  }
+  
+  .webtrader__flex {
+    
+    &--down {
+      width: 400px;
+      margin: 0 auto;
+    }
+    
+    &:first-child {
+      padding: 0;
+    }
+  }
+  
+  .webtrader__box {
+    width: 150px;
+  }
+  
+  .webtrader__box--right,
+  .webtrader__box--left,
+  .webtrader__box--up {
+    
+    &::before,
+    &::after {
+      display: none;
+    }
+  }
+  
   .webtrader__mockup {
     width: 400px;
     height: 460px;
@@ -209,10 +331,25 @@
     font-size: 40px;
   }
   
+  .webtrader__img {
+    background-size: 300px;
+    background-position-y: 0;
+  }
+  
   .webtrader__flex {
+    justify-content: center;
     
     &--list {
       flex-direction: column;
+    }
+    
+    &--down {
+      width: auto;
+      margin: 0;
+    }
+    
+    &:first-child {
+      padding: 220px 0 0 0;
     }
   }
   
@@ -223,6 +360,19 @@
   }
   
   .webtrader__list {
+    margin: 30px 0 0 0;
+    padding: 0 15px;
+  }
+  
+  .webtrader__links {
+    flex-direction: column;
+  }
+  
+  .webtrader__real {
+    margin: 0;
+  }
+  
+  .webtrader__demo {
     margin: 30px 0 0 0;
   }
 }
