mobile version on accout types page

--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -1698,3 +1698,21 @@ body {
   font-size: 24px;
   font-weight: 300;
   text-align: center; }
+
+@media screen and (max-width: 1200px) {
+  .account-types {
+    padding: 200px 0 70px 0; }
+  .account-types__text {
+    padding: 0 15px; }
+  .account-types__flex {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .account-types__box {
+    margin: 0 auto 10px; } }
+
+@media screen and (max-width: 768px) {
+  .account-types {
+    padding: 100px 0 70px 0; }
+  .account-types__name {
+    margin: 0 0 20px 0;
+    font-size: 40px; } }
