--- a/forexglobal/sass/blocks/main/header.scss
+++ b/forexglobal/sass/blocks/main/header.scss
@@ -50,6 +50,11 @@
       padding: 28px 15px 27px 190px;
       transition: 0.5s;
     }
+    
+    .nav__sub {
+      width: auto;
+      padding: 30px 0 0 0;
+    }
   }
   
   &--inner {
