--- a/forexglobal/sass/style.scss
+++ b/forexglobal/sass/style.scss
@@ -20,3 +20,6 @@
 // Inner Page
 @import 'blocks/inner/webtrader';
 @import 'blocks/inner/account-types';
+@import 'blocks/inner/account-comparison';
+@import 'blocks/inner/product-specification';
+@import 'blocks/inner/tab';
