--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -1765,3 +1765,143 @@ body {
   .account-types__name {
     margin: 0 0 20px 0;
     font-size: 40px; } }
+
+.account-comparison {
+  padding: 150px 0 70px 0; }
+
+.account-comparison__name {
+  margin: 0 0 50px 0;
+  color: #2f2861;
+  font-size: 60px;
+  font-weight: 500;
+  text-align: center; }
+
+.account-comparison__text {
+  margin: 0 0 70px 0;
+  color: #2f2861;
+  font-size: 18px;
+  font-weight: 300; }
+
+.product-specification {
+  padding: 150px 0 70px 0; }
+
+.product-specification__name {
+  margin: 0 0 50px 0;
+  color: #2f2861;
+  font-size: 60px;
+  font-weight: 500;
+  text-align: center; }
+
+.product-specification__text {
+  margin: 0 0 70px 0;
+  color: #2f2861;
+  font-size: 18px;
+  font-weight: 300; }
+
+@media screen and (max-width: 1200px) {
+  .product-specification {
+    padding: 200px 0 0 0; }
+  .product-specification__text {
+    padding: 0 15px; } }
+
+@media screen and (max-width: 768px) {
+  .product-specification {
+    padding: 100px 0 0 0; }
+  .product-specification__name {
+    margin: 0 0 20px 0;
+    font-size: 40px; } }
+
+.tab {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  overflow: hidden; }
+
+.tab__button {
+  width: 170px;
+  margin: 0 10px 0 0;
+  padding: 15px 0;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 300;
+  border: none;
+  border-top-right-radius: 30px;
+  background: #2f2861;
+  outline: none;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .tab__button:hover {
+    color: #fff;
+    background: #6420fa; }
+  .tab__button:last-child {
+    margin: 0; }
+
+.tab__active {
+  width: 200px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  background: #6420ff; }
+
+.tab__content {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #6420ff;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  border-top: none; }
+  .tab__content h3 {
+    color: #2f2861;
+    font-size: 30px;
+    font-weight: 500;
+    text-align: center;
+    text-transform: uppercase; }
+  .tab__content p {
+    color: #2f2861;
+    font-size: 18px;
+    font-weight: 300;
+    text-align: center; }
+  .tab__content b {
+    color: #2f2861;
+    font-size: 20px;
+    font-weight: 500; }
+  .tab__content ul {
+    color: #2f2861;
+    font-weight: 300; }
+
+.tab__table {
+  width: 100%;
+  margin: 0 0 10px 0;
+  color: #fff;
+  text-align: center;
+  border-collapse: collapse; }
+  .tab__table th {
+    padding: 10px;
+    font-weight: 500;
+    background: #6420ff; }
+    .tab__table th:last-child {
+      border-top-right-radius: 30px; }
+  .tab__table tr {
+    font-weight: 300;
+    border-bottom: 1px solid #6420ff;
+    background: #2f2861; }
+  .tab__table td {
+    padding: 10px 0; }
+
+@media screen and (max-width: 1200px) {
+  .tab__button {
+    font-size: 15px; } }
+
+@media screen and (max-width: 768px) {
+  .tab {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .tab__button {
+    width: 100%;
+    border-radius: 0; } }
