--- a/forexglobal/sass/style.scss
+++ b/forexglobal/sass/style.scss
@@ -23,3 +23,7 @@
 @import 'blocks/inner/account-comparison';
 @import 'blocks/inner/product-specification';
 @import 'blocks/inner/tab';
+@import 'blocks/inner/security-of-funds';
+@import 'blocks/inner/stp';
+@import 'blocks/inner/kids';
+@import 'blocks/inner/careers';
