--- a/forexglobal/sass/blocks/inner/tab.scss
+++ b/forexglobal/sass/blocks/inner/tab.scss
@@ -84,6 +84,7 @@
   
   th {
     padding: 10px;
+    font-size: 13px;
     font-weight: 500;
     background: #6420ff;
     
@@ -93,6 +94,7 @@
   }
   
   tr {
+    font-size: 12px;
     font-weight: 300;
     border-bottom: 1px solid #6420ff;
     background: $sc;
